--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             color: white;
             width: 100%;
             height: 100%;
+            margin:0;
             overflow: hidden;
             font-family: Monospace;
         }
